--- a/fonts/mf-player/demo.html
+++ b/fonts/mf-player/demo.html
@@ -13,10 +13,88 @@
 </head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> mf-player <small class="fgc1">(Glyphs:&nbsp;99)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> mf-player <small class="fgc1">(Glyphs:&nbsp;103)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: Unknown</h1>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-mf-sound-on"></span><span class="mls"> mficon-mf-sound-on</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e653" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe653;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-mf-sound-off"></span><span class="mls"> mficon-mf-sound-off</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e65a" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe65a;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-mf-next"></span><span class="mls"> mficon-mf-next</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e646" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe646;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-mf-close"></span><span class="mls"> mficon-mf-close</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e647" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe647;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-mf-check"></span><span class="mls"> mficon-mf-check</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e64a" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe64a;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-mf-back"></span><span class="mls"> mficon-mf-back</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e64c" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe64c;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
 				<span class="mficon-share"></span><span class="mls"> mficon-share</span>
@@ -834,37 +912,11 @@
 		</div>
 		<div class="glyph fs4">
 			<div class="clearfix bshadow0 pbs">
-				<span class="mficon-checkmark2"></span><span class="mls"> mficon-checkmark2</span>
-			</div>
-			<fieldset class="fs0 size1of1 clearfix hidden-false">
-				<input type="text" readonly value="e64a" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe64a;" class="unitRight size1of2 talign-right" />
-			</fieldset>
-			<div class="fs0 bshadow0 clearfix hidden-true">
-				<span class="unit pvs fgc1">liga: </span>
-				<input type="text" readonly value="" class="liga unitRight" />
-			</div>
-		</div>
-		<div class="glyph fs4">
-			<div class="clearfix bshadow0 pbs">
 				<span class="mficon-cancel"></span><span class="mls"> mficon-cancel</span>
 			</div>
 			<fieldset class="fs0 size1of1 clearfix hidden-false">
 				<input type="text" readonly value="e64b" class="unit size1of2" />
 				<input type="text" maxlength="1" readonly value="&#xe64b;" class="unitRight size1of2 talign-right" />
-			</fieldset>
-			<div class="fs0 bshadow0 clearfix hidden-true">
-				<span class="unit pvs fgc1">liga: </span>
-				<input type="text" readonly value="" class="liga unitRight" />
-			</div>
-		</div>
-		<div class="glyph fs4">
-			<div class="clearfix bshadow0 pbs">
-				<span class="mficon-cancel2"></span><span class="mls"> mficon-cancel2</span>
-			</div>
-			<fieldset class="fs0 size1of1 clearfix hidden-false">
-				<input type="text" readonly value="e64c" class="unit size1of2" />
-				<input type="text" maxlength="1" readonly value="&#xe64c;" class="unitRight size1of2 talign-right" />
 			</fieldset>
 			<div class="fs0 bshadow0 clearfix hidden-true">
 				<span class="unit pvs fgc1">liga: </span>
