comitando para tentar resolver o blink do modal

--- a/index.html
+++ b/index.html
@@ -389,6 +389,12 @@
 				<form action="#" method="get" accept-charset="utf-8">
 					<input type="text" name="" value="" placeholder="Seu Nome">
 					<input type="text" name="" value="" placeholder="Seu e-mail">
+					<select name="">
+						<option value="">Contato</option>
+						<option value="">feedback</option>
+						<option value="">reportar bug</option>
+						<option value="">contratar megafoto</option>
+					</select>
 					<textarea name="" placeholder="Insira uma mensagem"></textarea>
 					<button type="">Enviar mensagem</button>
 				</form>
@@ -398,13 +404,13 @@
 <!-- /modal end Feedback -->
 
 
-
+<!--
 	<div id="testes">
 		<a href="#" title="" class="default">alert padrao</a>
 		<a href="#" title="" class="sucess">alert sucesso</a>
 		<a href="#" title="" class="error">alert error</a>
 	</div>
-
+-->
 
 	<div id="alert-like" class="alert default">
 		<span class="progress"></span>
@@ -603,8 +609,6 @@
 		</section>
 
 		<section id="topButtons">
-
-			<a href="#" id="btBug" class="md-trigger md-setperspective" data-modal="modal-curtir"></a>
 			<a href="#" id="btFeedback" class="md-trigger md-setperspective" data-modal="modal-feedback"></a>
 			<a href="#" id="btHelp"></a>
 			<a href="#" id="btSound"></a>
