--- a/fonts/mf-player/demo.html
+++ b/fonts/mf-player/demo.html
@@ -13,10 +13,36 @@
 </head>
 <body>
 	<div class="bgc1 clearfix">
-		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> mf-player <small class="fgc1">(Glyphs:&nbsp;103)</small></h1>
+		<h1 class="mhmm mvm"><span class="fgc1">Font Name:</span> mf-player <small class="fgc1">(Glyphs:&nbsp;105)</small></h1>
 	</div>
 	<div class="clearfix mhl ptl">
 		<h1 class="mvm mtn bshadow fgc1">Grid Size: Unknown</h1>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-flag-en"></span><span class="mls"> mficon-flag-en</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e65b" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe65b;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
+		<div class="glyph fs1">
+			<div class="clearfix bshadow0 pbs">
+				<span class="mficon-flag-br"></span><span class="mls"> mficon-flag-br</span>
+			</div>
+			<fieldset class="fs0 size1of1 clearfix hidden-false">
+				<input type="text" readonly value="e65c" class="unit size1of2" />
+				<input type="text" maxlength="1" readonly value="&#xe65c;" class="unitRight size1of2 talign-right" />
+			</fieldset>
+			<div class="fs0 bshadow0 clearfix hidden-true">
+				<span class="unit pvs fgc1">liga: </span>
+				<input type="text" readonly value="" class="liga unitRight" />
+			</div>
+		</div>
 		<div class="glyph fs1">
 			<div class="clearfix bshadow0 pbs">
 				<span class="mficon-mf-sound-on"></span><span class="mls"> mficon-mf-sound-on</span>
