bug de z-index e pointer-events arrumado

--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 
 	<!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
-	<link rel="stylesheet" href="fonts/mf-player/style.css" />
-	<link rel="stylesheet" href="fonts/antonio/stylesheet.css">
 	<link rel="stylesheet" href="style.css">
 	
 	<!--[if IE]>
@@ -739,7 +737,7 @@
 					</div>
 				</header>
 				
-				<p class="quote">"Muito Legal esse jogo, inesquecível... Ver meu time vencer de goleada, na precença da mulher que eu amo e minha filha, é simplesmente incrível!"</p>
+				<p class="quote">"Muito Legal esse jogo, inesquecível... Ver meu time vencer de goleada, na presença da mulher que eu amo e minha filha, é simplesmente incrível!"</p>
 				
 				<nav class="user">
 					<a href="#" title="">Remover Tag</a>
