--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 			<a href="#" title="">Navegar sem fazer login</a>
 			<a href="#" title="" class="fb">Fazer login no facebook</a>
 		</nav>
-		<p>* Ao fazer login você concorda automaticamente com os <a href="termos.html" title="">Termos e condições</a>.</p>
+		<p>* Ao fazer login você concorda automaticamente com os <a href="termos/index.html" title="" target="blank">Termos e condições</a>.</p>
 	</section>
 	<nav class="apoio">
 		<h1>oferecimento:</h1>
