alteração de texto, imprima e imagem do pre loader

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 <body>
 
 <div id="splash">
+	<img src="img/splash/robot.png" alt="">
 	<span class="dot"></span>
 </div>
 
@@ -104,7 +105,7 @@
 				<a href="#" title="" class="md-close">&#xe647</a>
 			</header>
 			<div class="content">
-				<h1>Clicando em curtir você nos ajuda a realizar mais megafotos!</h1>
+				<h1>Curta nossa fanpage e nos ajude a realizar mais Megafotos.</h1>
 				<iframe src="//www.facebook.com/plugins/likebox.php?href=https%3A%2F%2Fwww.facebook.com%2Fmegafotos&amp;width=700&amp;height=300&amp;colorscheme=dark&amp;show_faces=true&amp;header=false&amp;stream=false&amp;show_border=false&amp;appId=222651567807370" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:100%; height:300px;" allowTransparency="true"></iframe>
 			</div>
 		</div>
@@ -116,7 +117,7 @@
 	<div class="md-modal md-effect" id="modal-share">
 		<div class="md-content">
 			<header>
-				<h1>Compartilhar esta megafoto</h1>
+				<h1>Compartilhe esta emoção com seus amigos</h1>
 				<a href="#" title="" class="md-close">&#xe647</a>
 			</header>
 			<div class="content">
@@ -175,20 +176,20 @@
 	<div class="md-modal md-effect" id="modal-print">
 		<div class="md-content">
 			<header>
-				<h1>Tenha esse momento impresso</h1>
+				<h1>Tenha este momento na sua parede</h1>
 				<a href="#" title="" class="md-close">&#xe647</a>
 			</header>
 			<div class="content">
 
 				<div data-content="1" class="step print-tipo active">
 					<a href="img/temp/imprima.jpg" title="" target="blank" class="preview">
-						<span>clique para ver o preview da imagem</span>
+						<span>Clique para ver o preview do Megaposter</span>
 						<img src="img/temp/imprima.jpg" alt="">
 					</a>
 					
 					<div class="tipos">
-						<a href="#" data-tab="2" title="" class=""><span>R$ 9,90</span>Formato pdf</a>
-						<a href="#" data-tab="3" title="" class=""><span>R$ 109,90</span>Receber impressa *</a>
+						<a href="#" data-tab="2" title="" class="">Dowload do PDF<span>R$ 9,90</span></a>
+						<a href="#" data-tab="3" title="" class="">A partir de<span>R$19,90</span></a>
 					</div>
 					<span>* valor do envio e não incluso / serviço apenas disponível para Brasil.</span>
 				</div>
@@ -201,9 +202,10 @@
 					</header>
 
 					<ul>
-						<li>A megafoto conterá um PDF com a imagem da sua marcação</li>
+						<li>Arquivo digital para download no formato PDF. Medida: 1,30m por 25cm</li>
+						<li>Após clicar em “efetuar pagamento”, você será direcionado para um ambiente seguro (paypal) para completar a compra.</li>
+						<li>Após a confirmação de pagamento, você receberá um email com o link para dowload do Megaposter.</li>
 						<li>Você receberá esta megafoto no e-mail cadastrado na sua conta do facebook</li>
-						<li>Após clicar em efetuar pagamento, você será redirecionado para um ambiente seguro (paypal) para completar a compra</li>
 					</ul>
 					<a href="http://paypal.com" target="blank" class="bt-pay">Efetuar pagamento: R$ 9,90</a>
 				</div>
@@ -215,11 +217,13 @@
 					</header>
 
 					<ul>
-						<li>A megafoto conterá um PDF com a imagem da sua marcação</li>
-						<li>Você receberá esta megafoto no e-mail cadastrado na sua conta do facebook</li>
-						<li>Após clicar em efetuar pagamento, você será redirecionado para um ambiente seguro (paypal) para completar a compra</li>
+						<li>Receba o megaposter na sua casa, em papel especial, impressão premium e embalagem exclusiva.</li>
+						<li>Clicando em continuar você será direcionado para a loja de nosso parceiro. São diversos tamanhos para sua escolha.</li>
 					</ul>
+					<a href="http://www.alphagraphics.com.br/" class="bt-pay" target="blank">A partir de R$19,90</a>
+					<!--
 					<a href="#" class="bt-pay" data-tab="4">Continuar</a>
+					-->
 				</div>
 
 				<div data-content="4" class="step print-papel">
@@ -277,7 +281,7 @@
 	<div class="md-modal md-effect md-scroll" id="modal-maisMegas">
 		<div class="md-content">
 			<header>
-				<h1>Veja mais megafotos</h1>
+				<h1>Mais recentes</h1>
 				<a href="#" title="" class="md-close">&#xe647</a>
 			</header>
 			<div class="content">
@@ -369,7 +373,7 @@
 
 				</nav>
 
-				<a href="http://www.megafoto.org" title="">Ver todas as megafotos</a>
+				<a href="http://www.megafoto.org" title="">Ver todas</a>
 
 			</div>
 		</div>
@@ -398,7 +402,7 @@
 	<div class="md-modal md-effect" id="modal-feedback">
 		<div class="md-content">
 			<header>
-				<h1>Seu feedback é muito importante</h1>
+				<h1>sua opinião é muito importante</h1>
 				<a href="#" title="" class="md-close">&#xe647</a>
 			</header>
 
@@ -409,7 +413,7 @@
 					<select name="">
 						<option value="">Informe o assunto</option>
 						<option value="">Contato</option>
-						<option value="">feedback</option>
+						<option value="">opinião</option>
 						<option value="">reportar bug</option>
 						<option value="">contratar megafoto</option>
 					</select>
@@ -627,10 +631,10 @@
 		</section>
 
 		<section id="topButtons">
-			<a href="#" id="btFeedback" class="md-trigger md-setperspective" data-modal="modal-feedback"></a>
-			<a href="#" id="btHelp"></a>
-			<a href="#" id="btSound"></a>
-			<a onclick="$(document).toggleFullScreen()" id="btFullscreen"></a>
+			<a href="#" id="btFeedback" class="md-trigger md-setperspective tooltip" data-modal="modal-feedback" title="Deixe sua mensagem"></a>
+			<a href="#" id="btHelp" class="tooltip" title="Ajuda"></a>
+			<a href="#" id="btSound" class="tooltip" title="Som"></a>
+			<a onclick="$(document).toggleFullScreen()" id="btFullscreen" class="tooltip" title="Tela Cheia"></a>
 		</section>
 
 		<section id="krControls"></section>
@@ -829,6 +833,7 @@
 	<script src="js/libs/modalEffects.js"></script>
 	<script src="js/libs/typeahead.js"></script>
 	<script src="js/libs/pace.min.js"></script>
+	<script src="js/libs/jquery.tooltipster.min.js"></script>
 
 	<!-- scripts concatenated and minified via build script -->
 	<script src="js/plugins.js"></script>
