alteraçao no fluxo de marcacao do amigo

--- a/index.html
+++ b/index.html
@@ -698,13 +698,12 @@
 				<div data-content="4" class="step marcar-amigo">
 					<header>
 						<a href="#" data-tab="1" title="" class="bt-voltar">&#xe64c</a>
-						<h1>Digite o nome e e-mail do seu amigo</h1>
+						<h1>Digite o nome do seu amigo</h1>
 						<a href="#" title="" class="bt-close">&#xe647</a>
 					</header>
 
 					<form>
 						<input class="amigos" type="text" placeholder="Nome do seu amigo">
-						<input type="text" placeholder="e-mail do seu amigo">
 						<button type="" data-tab="5">Continuar</button>
 					</form>
 				</div>
@@ -724,7 +723,20 @@
 					</form>
 				</div>
 
-				<div data-content="6" class="step share-facebook">
+				<div data-content="6" class="step marcar-amigo">
+					<header>
+						<a href="#" data-tab="5" title="" class="bt-voltar">&#xe64c</a>
+						<h1>Digite o e-mail do seu amigo</h1>
+						<a href="#" title="" class="bt-close">&#xe647</a>
+					</header>
+
+					<form>
+						<input type="text" placeholder="e-mail do seu amigo">
+						<button type="" data-tab="7">Continuar</button>
+					</form>
+				</div>
+
+				<div data-content="7" class="step share-facebook">
 					<header>
 						<a href="#" data-tab="5" title="" class="bt-voltar">&#xe64c</a>
 						<h1>Escreva sua mensagem e publique no seu mural</h1>
