alteraçao no fluxo de marcacao do amigo2

--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
 					<form>
 						<h1>Informe o email de seu amigo para que ele seja avisado que você o marcou</h1>
 						<input type="text" placeholder="e-mail do seu amigo">
-						<button type="" data-tab="7">Continuar</button>
+						<button type="" data-tab="7">Finalizar marcação</button>
 					</form>
 				</div>
 
