botao logar no facebook

--- a/index.html
+++ b/index.html
@@ -457,8 +457,10 @@
 	<div class="container">
 
 		<a href="http://megafoto.org" target="blank" title="" id="logo"></a>
-
 		<a href="#" id="btUser" class="open"><span></span><b>Menu</b></a>
+<!--
+		<a href="#" id="btNoLogged" class="mficon-facebook"><b>Conectar no facebook</b></a>
+-->
 
 		<section id="userNav">
 			<div id="user">
