Bug de estilo arrumado em btMarcarVip

--- a/index.html
+++ b/index.html
@@ -644,7 +644,7 @@
 
 		<section id="adminOnly">
 			<nav>
-				<a href="#" id="marcarVip" class="md-trigger md-setperspective tooltip" data-modal="modal-marcarVip" title="Marcar Vip"></a>
+				<a href="#" id="marcarVip" class="md-trigger md-setperspective tooltip" data-modal="modal-marcarVip" title="Marcar Vip"><span></span></a>
 			</nav>
 		</section>
 
