botão ver vips + modal ver vips

--- a/index.html
+++ b/index.html
@@ -92,6 +92,46 @@
 	</div>
 <!-- /modal end amigos -->
 
+<!-- /modal VIPS -->
+	<div class="md-modal md-effect md-scroll" id="modal-vips">
+		<div class="md-content">
+			<header>
+				<h1>15 famosos se marcaram nesta foto</h1>
+				<a href="#" title="" class="md-close">&#xe647</a>
+			</header>
+			<div class="content">
+				<nav>
+					<a href="#" title=""><img src="img/avatar/profile1.jpg" alt=""><h1>Lorena kátia de souza</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile2.jpg" alt=""><h1>Marcio Rodrigues</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile3.jpg" alt=""><h1>Daniel Brandão</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile4.jpg" alt=""><h1>Felipe shrink Vidal</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile5.jpg" alt=""><h1>Gustavo Marques</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile6.jpg" alt=""><h1>Lorena kátia de souza</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile7.jpg" alt=""><h1>Marcio Rodrigues</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile8.jpg" alt=""><h1>Daniel Brandão</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile9.jpg" alt=""><h1>Felipe shrink Vidal</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile10.jpg" alt=""><h1>Gustavo Marques</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile11.jpg" alt=""><h1>Lorena kátia de souza</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile12.jpg" alt=""><h1>Marcio Rodrigues</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile13.jpg" alt=""><h1>Daniel Brandão</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile14.jpg" alt=""><h1>Felipe shrink Vidal</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile15.jpg" alt=""><h1>Gustavo Marques</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile16.jpg" alt=""><h1>Lorena kátia de souza</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile17.jpg" alt=""><h1>Marcio Rodrigues</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile18.jpg" alt=""><h1>Daniel Brandão</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile19.jpg" alt=""><h1>Felipe shrink Vidal</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile20.jpg" alt=""><h1>Gustavo Marques</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile21.jpg" alt=""><h1>Lorena kátia de souza</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile22.jpg" alt=""><h1>Marcio Rodrigues</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile23.jpg" alt=""><h1>Daniel Brandão</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile24.jpg" alt=""><h1>Felipe shrink Vidal</h1></a>
+					<a href="#" title=""><img src="img/avatar/profile25.jpg" alt=""><h1>Gustavo Marques</h1></a>
+				</nav>
+			</div>
+		</div>
+	</div>
+<!-- /modal end VIPS -->
+
 
 <!-- /modal curtir -->
 	<div class="md-modal md-effect" id="modal-curtir">
@@ -427,7 +467,6 @@
 		<a href="#" title="" class="sucess">alert sucesso</a>
 		<a href="#" title="" class="error">alert error</a>
 	</div>
--->
 
 	<div id="alert-like" class="alert default">
 		<span class="progress"></span>
@@ -444,6 +483,7 @@
 		<span class="progress"></span>
 		<h1>Sucesso na solitação</h1>
 	</div>
+-->
 
 
 
@@ -469,6 +509,7 @@
 				<p>Você tem 15 amigos<br> nesta foto</p>
 			</a>
 			<nav>
+				<a href="#" title="" class="mficon-star md-trigger md-setperspective" data-modal="modal-vips">15 vips nesta megafoto</a>
 				<a href="#" title="" class="mficon-like md-trigger md-setperspective" data-modal="modal-curtir">Curtir a megafoto</a>
 				<a href="#" title="" class="mficon-share md-trigger md-setperspective" data-modal="modal-share">Compartilhar megafoto</a>
 				<a href="#" title="" class="mficon-pictures md-trigger md-setperspective" data-modal="modal-maisMegas">Ver mais megafotos</a>
