--- a/index.html
+++ b/index.html
@@ -949,7 +949,7 @@
 			</div>
 		</div>
 
-		<div id="tagVip" class="tagBox positionTest">
+		<div class="tagBox tagVip positionTest">
 			<a href="#" title="" class="tagBt"></a>
 			<div class="profile">
 				<header>
